--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -5,7 +5,6 @@ applications:
   - route: backlog-pal-np.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-np.apps.evans.pal.pivotal.io
   services:
   - tracker-backlog-database
+  - tracker-service-registry
