--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -13,3 +13,4 @@ applications:
   - tracker-timesheets-database
   - tracker-service-registry
   - tracker-circuit-breaker-dashboard
+  - tracker-sso
